...
                                .padding(.vertical, 2)
                                .background(Color.red)
                                .cornerRadius(10)
                        }
                    }

                    NavigationLink(destination: Text("Управление курсами")) {
                        HStack {
                            Image(systemName: "book.closed")
                                .foregroundColor(.green)
                                .frame(width: 30)

                            Text("Управление курсами")
...
                            .foregroundColor(.red)
                    }
                }
            }
        }
        .listStyle(InsetGroupedListStyle())
        .navigationTitle("Ещё")
        .navigationBarTitleDisplayMode(.large)
        .onAppear {
            checkAdminStatus()
        }
    }

...
